arrumando as coisas

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         </div>
 
         <div class="main-btn">
-            <button>Começar</button>
+            <button class="start">Começar</button>
         </div>
     </main>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
