--- a/index.html
+++ b/index.html
@@ -8,10 +8,34 @@
     <title>Belogaritmo</title>
 </head>
 <body>
+
     <header id="main-header">
-        <section class="botao-hamb">
+        <nav class="menu">
+            <input type="checkbox" id="check">
+            <label for="check" class="labelbtn">
+                <div class="line-menu"></div>
+                <div class="line-menu"></div>
+                <div class="line-menu"></div>
+            </label>
+            <div class="nav-mobile">
+                <a href="index.html">
+                    <img src="" alt="">
+                    <p>Home</p>
+                </a>
+                <a href="">
+                    <img src="materias.html" alt="">
+                    <p>Matérias</p>
+                </a>
+                <a href="">
+                    <img src="# alt="">
+                    <p>Favoritos</p>
+                </a>
+            </div>
+    
+        </nav>
+        <!-- <button class="botao-hamb">
             <img src="./assets/img/botao-hamburguer.png" alt="imagem do botao hamburguer">
-        </section>
+        </button> -->
         <div class="text text-header">
             Belogaritmo
         </div>
