--- a/materias.html
+++ b/materias.html
@@ -30,7 +30,7 @@
             <button>Análise Gráfica</button>
         </div>
         <div class="main-btn">
-            <button>Álgebra</button>
+            <button id="bntAlgebra">Álgebra</button>
         </div>
         <div class="main-btn">
             <button>Análise Combinatória</button>
