finalizando app, falta consertar alguns detalhes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="main-btn">
-            <button class="start">Começar</button>
+            <button class="start" onclick="rota('materias.html')">Começar</button>
         </div>
     </main>
     <script src="assets/js/script.js"></script>
