arrumando header, e texts

--- a/algebra.html
+++ b/algebra.html
@@ -18,15 +18,15 @@
             </label>
             <div class="nav-mobile">
                 <a href="index.html">
-                    <img src="" alt="">
+                    <img src="assets/img/svg-home-icon.svg" alt="">
                     <p>Home</p>
                 </a>
-                <a href="">
-                    <img src="materias.html" alt="">
+                <a href="materias.html">
+                    <img src="assets/img/svg-livro-icon.svg" alt="">
                     <p>Matérias</p>
                 </a>
-                <a href="">
-                    <img src="# alt="">
+                <a href="#">
+                    <img src="assets/img/svg-star-icon.svg" alt="">
                     <p>Favoritos</p>
                 </a>
             </div>
@@ -157,11 +157,11 @@
         </div>
         
         <div class="text box box-text1">
-            <p style="margin-top: 20vw;">"O livro da natureza foi escrito exclusivamente com figuras e símbolos matemáticos"</p>
-            <p style="color: rgb(127, 178, 255);">(Galileu Galilei)</p>
+            <p style="margin-top: 20vh;;">"O livro da natureza foi escrito exclusivamente com figuras e símbolos matemáticos"</p>
+            <p style="color: rgb(127, 178, 255);font-style: italic;">(Galileu Galilei)</p>
         </div>
 
-        <div class="main-btn" style="margin-top: 15vw;">
+        <div class="main-btn" style="margin-top: 15vh;">
             <button onclick="rota('questao.html')">Exercícios</button>
         </div>
     </main>
