--- a/materias.html
+++ b/materias.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/materias.css">
     <link rel="import" href="./assets/font/Itim-Regular.woff">
-    <
     <title>Belogaritmo</title>
 </head>
 <body>
@@ -19,15 +18,15 @@
             </label>
             <div class="nav-mobile">
                 <a href="index.html">
-                    <img src="" alt="">
+                    <img src="assets/img/svg-home-icon.svg" alt="">
                     <p>Home</p>
                 </a>
                 <a href="materias.html">
-                    <img src="" alt="">
+                    <img src="assets/img/svg-livro-icon.svg" alt="">
                     <p>Matérias</p>
                 </a>
                 <a href="#">
-                    <img src="" alt="">
+                    <img src="assets/img/svg-star-icon.svg" alt="">
                     <p>Favoritos</p>
                 </a>
             </div>
