--- a/questao.html
+++ b/questao.html
@@ -19,15 +19,15 @@
             </label>
             <div class="nav-mobile">
                 <a href="index.html">
-                    <img src="" alt="">
+                    <img src="assets/img/svg-home-icon.svg" alt="">
                     <p>Home</p>
                 </a>
-                <a href="">
-                    <img src="materias.html" alt="">
+                <a href="materias.html">
+                    <img src="assets/img/svg-livro-icon.svg" alt="">
                     <p>Matérias</p>
                 </a>
-                <a href="">
-                    <img src="# alt="">
+                <a href="#">
+                    <img src="assets/img/svg-star-icon.svg" alt="">
                     <p>Favoritos</p>
                 </a>
             </div>
