add novas materias(falta as questoes) ;

--- a/algebra.html
+++ b/algebra.html
@@ -162,7 +162,7 @@
         </div>
 
         <div class="main-btn" style="margin-top: 15vh;">
-            <button onclick="rota('questao.html')">Exercícios</button>
+            <button onclick="rota('algebraQuesto.html')">Exercícios</button>
         </div>
     </main>
     <script src="assets/js/script.js"></script>
