--- a/materias.html
+++ b/materias.html
@@ -47,19 +47,19 @@
         </div>
 
         <div class="main-btn">
-            <button>Geometria Plana</button>
+            <button onclick="rota('geometria.html')">Geometria Plana</button>
         </div>
         <div class="main-btn">
-            <button>Análise Gráfica</button>
+            <button onclick="rota('Analise.html')" >Análise Gráfica</button>
         </div>
         <div class="main-btn">
             <button id="bntAlgebra" onclick="rota('algebra.html')">Álgebra</button>
         </div>
         <div class="main-btn">
-            <button>Análise Combinatória</button>
+            <button onclick="rota('analiseComb.html')">Análise Combinatória</button>
         </div>
         <div class="main-btn">
-            <button>Geometria Plana</button>
+            <button onclick="rota('probabilidade.html')">Teoria das probabilidades</button>
         </div>
     </main>
     <script src="assets/js/script.js"></script>
